--- a/osstat.Rmd
+++ b/osstat.Rmd
@@ -2,15 +2,49 @@
 title: "osstat"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: columns
-    vertical_layout: fill
+    orientation: rows
 ---
 
 ```{r setup, include=FALSE}
 library(flexdashboard)
+load("data/d.RData")
 ```
 
-Column
+Row
+-----------------------------------------------------------------------
+
+
+### Countries represented
+
+```{r}
+data <- d[["UserCountry"]][["getCountry"]]
+value <- length(unique(data$metadata_code))
+valueBox(value, icon = "fa-globe")
+
+```
+
+### Days of traffic
+
+```{r}
+value <- max(unique(data$date))-min(unique(data$date))
+valueBox(value, icon = "fa-calendar")
+```
+
+### Visits (total)
+
+```{r}
+value <- sum(as.numeric(data$nb_visits))
+valueBox(value, icon = "fa-users")
+```
+
+### Actions (total)
+
+```{r}
+value <- sum(as.numeric(data$nb_actions))
+valueBox(value, icon = "fa-dot-circle-o")
+```
+
+Row
 -----------------------------------------------------------------------
 
 ### Chart A
@@ -18,23 +52,8 @@ Column
 ```{r}
 data<-setNames(aggregate(cbind(as.numeric(nb_visits), as.numeric(nb_actions))~metadata_code,data=d[["UserCountry"]][["getCountry"]], sum),c("country","nb_visits","nb_actions"))
 par(mar = rep(4.5, 4))
-plot(data$nb_visits,data$nb_actions,main="traffic by country",xlab="nb visits",ylab="nb actions",col="blue",pch=19)
+plot(data$nb_visits,data$nb_actions,main="total traffic by country",xlab="nb visits",ylab="nb actions",col="blue",pch=19)
 text(data$nb_visits,data$nb_actions,labels=data$country,pos=3)
-
 ```
 
-Column {data-width=350}
------------------------------------------------------------------------
-
-### Chart B
-
-```{r}
-
-```
-
-### Chart C
-
-```{r}
-
-```
 
