--- a/osstat.Rmd
+++ b/osstat.Rmd
@@ -57,8 +57,12 @@ Row
 ```{r}
 
 df<-setNames(aggregate(cbind(as.numeric(nb_visits), as.numeric(nb_actions))~metadata_code,data=d[["UserCountry"]][["getCountry"]], sum),c("country","nb_visits","nb_actions"))
-df$class_visits <- with(df, ifelse(nb_visits<100, "<100",ifelse(nb_visits>500,">500","100..500")))
-#par(mar = rep(4.5, 4))
+
+clusters <- scale(df[,c("nb_visits","nb_actions")])
+fit <- kmeans(clusters,3)
+#df$class_visits <- with(df, ifelse(nb_visits<100, "<100",ifelse(nb_visits>500,">500","100..500")))
+df$cluster <- fit$cluster
+
 df <- merge(x=df,y=refCountry,by.x="country",by.y="code")
 
 tooltips <- paste("<b>",df$lib,"</b><br/>nb visits:",df$nb_visits,"<br/>nb actions:",df$nb_actions)
@@ -66,7 +70,7 @@ tooltips <- paste("<b>",df$lib,"</b><br/>nb visits:",df$nb_visits,"<br/>nb actio
 s1 <- scatterD3(data=df, x=nb_visits, y=nb_actions, point_opacity=0.5, hover_size=4, hover_opacity=1, xlab="nb visits", ylab="nb actions", tooltip_text=tooltips)
 htmlwidgets::saveWidget(s1,'s1.html')
 
-s2 <- scatterD3(data=df, x=nb_visits, y=nb_actions, point_opacity=0.5, col_var=class_visits, hover_size=4, hover_opacity=1, lab=country, xlab="nb visits", ylab="nb actions", col_lab="nb visits", tooltip_text=tooltips)
+s2 <- scatterD3(data=df, x=nb_visits, y=nb_actions, point_opacity=0.5, col_var=cluster, hover_size=4, hover_opacity=1, lab=country, xlab="cluster", ylab="nb actions", col_lab="nb visits", tooltip_text=tooltips)
 htmlwidgets::saveWidget(s2,'s2.html')
 
 slickR(c(paste0(readLines('s1.html'),collapse='\n'),
