--- a/osstat.Rmd
+++ b/osstat.Rmd
@@ -13,6 +13,7 @@ library(countrycode)
 library(formattable)
 library(slickR)
 library(svglite)
+library(dplyr)
 load("data/d.RData")
 load("data/refCountry.RData")
 ```
@@ -61,7 +62,6 @@ Row
 
 ```{r}
 
-# df<-setNames(aggregate(cbind(as.numeric(nb_visits), as.numeric(nb_actions))~metadata_code,data=d[["UserCountry"]][["getCountry"]], sum),c("country","nb_visits","nb_actions"))
 df <- d[["UserCountry"]][["getCountry"]]
 df$ratio_uniq_v <- with(df,as.numeric(nb_uniq_visitors)/as.numeric(nb_visits))
 
@@ -74,16 +74,6 @@ df.mean <- setNames(
   c("country","ratio_uniq_v")
 )
 df <- merge(df.sum,df.mean,by=c("country"))
-
-# df.sum <- setNames(
-#   aggregate(cbind(as.numeric(nb_visits), as.numeric(nb_actions))~metadata_code,data=d[["UserCountry"]][["getCountry"]], sum),
-#   c("country","nb_visits","nb_actions")
-# )
-# df.mean <- setNames(
-#   aggregate(cbind(ratio_uniq_v)~metadata_code,data=d[["UserCountry"]][["getCountry"]], mean),
-#   c("country","ratio_uniq_v")
-# )
-# df <- merge(df.sum,df.mean,by=c("country"))
 
 clusters <- scale(df[,c("nb_visits","nb_actions")])
 fit <- kmeans(clusters,3)
@@ -151,45 +141,38 @@ m1 <-  plot_geo(df) %>%
     locations=~countrycode(as.vector(country),origin="iso2c",destination="iso3c"),
     text=~lib,
     marker = list(line = l),
-    #colors='Blues'
-    colors="blue"
+    colors='Blues'
   ) %>%
   layout(geo=g, title="traffic by country area") %>%
   colorbar(title = '% of global traffic')
 htmlwidgets::saveWidget(m1,'m1.html')
 
-# bar chart
+# bar chart:
+
 data <- df[df$cluster==1,]
+data$ratio_uniq_v <- round(data$ratio_uniq_v*100)
 b1 <- plot_ly(
-  x=round(data$nb_uniq_visitors), y=as.character(data$lib),
+  x=round(data$ratio_uniq_v), y=as.character(data$lib), name="cluster #1",
   type="bar", orientation="h", marker=list(color="lightgreen")
 ) %>%
   layout(
-    title="average number of unique visitor per day for cluster #1",
-    margin = list(l=100)
-    ) %>%
-  add_annotations(xref = 'x1', yref = 'y',
-                  x = round(data$nb_uniq_visitors),  y = as.character(data$lib),
-                  text = paste0("   ",round(data$nb_uniq_visitors)),
-                  font = list(family = 'Arial', size = 14),
-                  showarrow = FALSE)
-htmlwidgets::saveWidget(b1,'b1.html')
+    margin = list(l=100, b=100)
+    ) 
 
 data <- df[df$cluster==2,]
+data$ratio_uniq_v <- round(data$ratio_uniq_v*100)
 b2 <- plot_ly(
-  x=round(data$nb_uniq_visitors), y=as.character(data$lib),
+  x=round(data$ratio_uniq_v), y=as.character(data$lib), name="cluster #2",
   type="bar", orientation="h", marker=list(color="lightcoral")
 ) %>%
   layout(
-    title="average number of unique visitor per day for cluster #2",
     margin = list(l=100)
-  ) %>%
-  add_annotations(xref = 'x1', yref = 'y',
-                  x = round(data$nb_uniq_visitors),  y = as.character(data$lib),
-                  text = paste0("  ",round(data$nb_uniq_visitors)),
-                  font = list(family = 'Arial', size = 14),
-                  showarrow = FALSE)
-htmlwidgets::saveWidget(b2,'b2.html')
+  )
+
+b <- subplot(b1,b2) %>%
+  layout(title="part of unique visitors on daily visits for clusters #1 & #2")
+
+htmlwidgets::saveWidget(b,'b.html')
 
 # carousel to embed all the charts
 slickR(c(paste0(readLines('s1.html'),collapse='\n'),
@@ -197,14 +180,140 @@ slickR(c(paste0(readLines('s1.html'),collapse='\n'),
          paste0(readLines('p1.html'),collapse='\n'),
          paste0(readLines('t1.html'),collapse='\n'),
          paste0(readLines('m1.html'),collapse='\n'),
-         paste0(readLines('b1.html'),collapse='\n'),
-         paste0(readLines('b2.html'),collapse='\n')),
+         paste0(readLines('b.html'),collapse='\n')),
        slideId = "countries",
-       slideIdx = list(1:7),
+       slideIdx = list(1:6),
        slideType = "iframe",
        slickOpts = list(dots=T),
        height='500px',width='100%')
 
 ```
 
+Visits summary
+===================================== 
 
+Row
+-----------------------------------------------------------------------
+
+### Days
+
+```{r}
+data <- d[["VisitsSummary"]][["get"]]
+data <- data[order(data$date),]
+begin <- min(data$date)
+value <- max(data$date)-begin
+valueBox(value, caption=paste0("Days (from ",begin,")"), icon = "fa-calendar")
+```
+
+### Visits (Average Growth Rate)
+
+```{r}
+growth <- function(x)x/lag(x)-1
+data$nb_visits <- as.numeric(as.character(data$nb_visits))
+value <- round(mean(growth(data$nb_visits),na.rm=T)*100)
+valueBox(paste0(value," %"), icon = "fa-users", color=ifelse(value>0,"success","warning"))
+```
+
+### Unique visitors (AGR)
+
+```{r}
+data$nb_uniq_visitors <- as.numeric(as.character(data$nb_uniq_visitors))
+value <- round(mean(growth(data$nb_uniq_visitors),na.rm=T)*100)
+valueBox(paste0(value," %"), icon = "fa-user-plus", color=ifelse(value>0,"success","warning"))
+```
+
+### Actions (AGR)
+
+```{r}
+data$nb_actions <- as.numeric(as.character(data$nb_actions))
+value <- round(mean(growth(data$nb_actions),na.rm=T)*100)
+valueBox(paste0(value," %"), icon = "fa-dot-circle-o", color=ifelse(value>0,"success","warning"))
+```
+
+### Average time on site (AGR)
+
+```{r}
+data$avg_time_on_site <- as.numeric(as.character(data$avg_time_on_site))
+value <- round(mean(growth(data$avg_time_on_site),na.rm=T)*100)
+valueBox(paste0(value," %"), icon = "fa-clock-o", color=ifelse(value>0,"success","warning"))
+```
+
+### Bounce rate (AGR)
+
+```{r}
+data$bounce_rate <- as.numeric(as.character(data$bounce_rate))
+value <- round(mean(growth(data$bounce_rate),na.rm=T)*100)
+valueBox(paste0(value," %"), icon = "fa-futbol-o", color=ifelse(value<50,"success","warning"))
+```
+
+Row
+-----------------------------------------------------------------------
+
+```{r}
+
+#visits chart (unadjusted):
+vs_1 <- plot_ly(data, x=~date, y=~round(nb_visits), type="scatter", mode="lines", line=list(color="royalblue")) %>%
+  layout(title = "number of visits (non adjusted)",
+         xaxis = list(title = "days"),
+         yaxis = list (title = "visits"))
+
+htmlwidgets::saveWidget(vs_1,'vs_1.html')
+
+#visits chart (smoothed):
+l <- lowess(data$nb_visits)
+l$x <- data$date
+l<- as.data.frame(l)
+vs_2 <- plot_ly(x=data$date, y=round(data$nb_visits), type="scatter", mode="lines", line=list(color="lightblue"), name="unadjusted") %>%
+  add_trace(y=round(l$y),line=list(color="red"), name="smoothed") %>%
+  layout(title = "number of visits",
+         yaxis = list (title = "visits"))
+
+htmlwidgets::saveWidget(vs_2,'vs_2.html')
+
+#unique visitors:
+l <- lowess(data$nb_uniq_visitors)
+l$x <- data$date
+l<- as.data.frame(l)
+vs_3 <- plot_ly(x=data$date, y=round(data$nb_uniq_visitors), type="scatter", mode="lines", line=list(color="lightblue"), name="unadjusted") %>%
+  add_trace(y=round(l$y),line=list(color="red"), name="smoothed") %>%
+  layout(title = "number of unique visitors",
+         yaxis = list (title = "unique visitors"))
+
+htmlwidgets::saveWidget(vs_3,'vs_3.html')
+
+#actions:
+l <- lowess(data$nb_actions)
+l$x <- data$date
+l<- as.data.frame(l)
+vs_4 <- plot_ly(x=data$date, y=round(data$nb_actions), type="scatter", mode="lines", line=list(color="lightblue"), name="unadjusted") %>%
+  add_trace(y=round(l$y),line=list(color="red"), name="smoothed") %>%
+  layout(title = "number of actions",
+         yaxis = list (title = "actions"))
+
+htmlwidgets::saveWidget(vs_4,'vs_4.html')
+
+#average time on site:
+l <- lowess(data$avg_time_on_site)
+l$x <- data$date
+l<- as.data.frame(l)
+vs_5 <- plot_ly(x=data$date, y=round(data$avg_time_on_site), type="scatter", mode="lines", line=list(color="lightblue"), name="unadjusted") %>%
+  add_trace(y=round(l$y),line=list(color="red"), name="smoothed") %>%
+  layout(title = "average time on site",
+         yaxis = list (title = "time on site (avg)"))
+
+htmlwidgets::saveWidget(vs_5,'vs_5.html')
+
+
+# carousel to embed all the charts
+slickR(c(paste0(readLines('vs_1.html'),collapse='\n'),
+         paste0(readLines('vs_2.html'),collapse='\n'),
+         paste0(readLines('vs_3.html'),collapse='\n'),
+         paste0(readLines('vs_4.html'),collapse='\n'),
+         paste0(readLines('vs_5.html'),collapse='\n')),
+       slideId = "vs",
+       slideIdx = list(1:5),
+       slideType = "iframe",
+       slickOpts = list(dots=T),
+       height='500px',width='100%')
+
+```
